# json-explorer

./: .gitignore  CLAUDE.md  LICENSE  Makefile  README.md  index.html  package.json  pnpm-lock.yaml  vite.config.ts
.github/workflows/: release.yml
scripts/: profile-app.ps1
src/: App.vue  components.d.ts  main.ts  shims.d.ts  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/crates/json-index/: Cargo.toml
src-tauri/crates/json-index/benches/: index_search.rs
src-tauri/crates/json-index/examples/: bench_index.rs  bench_search.rs  gen_fixture.rs  load_test.rs  mem_index.rs
src-tauri/crates/json-index/src/: error.rs  index.rs  lib.rs  raw.rs  scanner.rs  search.rs
src-tauri/crates/json-index/src/tests/: mod.rs
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  dto.rs  lib.rs  main.rs  state.rs
src/api/: ipc.ts
src/components/: InspectorPane.vue  SearchPanel.vue  TreeRow.vue
src/composables/: treeNav.test.ts  treeNav.ts  useSearch.test.ts  useSearch.ts  useTree.test.ts  useTree.ts
src/router/: index.ts
src/stores/: file.test.ts  file.ts
src/types/: json.test.ts  json.ts
src/utils/: clipboard.ts  format.ts  jsonHighlight.test.ts  jsonHighlight.ts  jsonPath.test.ts  jsonPath.ts
src/views/: ExplorerView.vue  OpenView.vue
